# ploston-core

./: .pre-commit-config.yaml  LICENSE  Makefile  README.md  ael-config.yaml  pyproject.toml
.github/actions/update-dashboard/: action.yml
.github/workflows/: ci.yml  publish.yml  release.yml  trigger-downstream.yml
docs/: README.md
docs/architecture/: IMPLEMENTED_ARCHITECTURE.md
docs/concepts/: execution-model.md  how-ploston-works.md  security-model.md
docs/reference/: config-reference.md  error-codes.md  workflow-schema.md
src/ploston_core/: __init__.py  application.py
src/ploston_core/api/: __init__.py  app.py  auth.py  config.py  errors.py  store.py
src/ploston_core/auth/: __init__.py  api_key.py  middleware.py  models.py  rate_limiter.py  store.py  tool_filter.py
src/ploston_core/config/: __init__.py  importer.py  loader.py  mode_manager.py  models.py  redis_store.py  schema_registry.py  secrets.py  service_configs.py  staged_config.py
src/ploston_core/engine/: __init__.py  engine.py  error_enrichment.py  normalize.py  types.py
src/ploston_core/errors/: __init__.py  errors.py  factory.py  matchers.py  registry.py
src/ploston_core/extensions/: __init__.py  capabilities.py  feature_flags.py  plugins.py
src/ploston_core/invoker/: __init__.py  factory.py  invoker.py  runner_dispatcher.py  types.py
src/ploston_core/logging/: __init__.py  colors.py  logger.py
src/ploston_core/mcp/: __init__.py  client_legacy.py  connection.py  manager.py  protocol.py  types.py
src/ploston_core/mcp_frontend/: __init__.py  http_transport.py  server.py  stdio.py  types.py
src/ploston_core/native_tools/: __init__.py  data.py  extraction.py  filesystem.py  firecrawl.py  health.py  kafka.py  ml.py  network.py
src/ploston_core/plugins/: __init__.py  base.py  registry.py  types.py
src/ploston_core/registry/: __init__.py  formatters.py  registry.py  types.py
src/ploston_core/runner_management/: __init__.py  dispatcher.py  embedded_ca.py  persistent_registry.py  registry.py  router.py  websocket_server.py
src/ploston_core/sandbox/: __init__.py  sandbox.py  types.py
src/ploston_core/schema/: __init__.py  backends.py  extractor.py  formatters.py  store.py  types.py
src/ploston_core/telemetry/: __init__.py  chain_detector.py  context.py  instrumentation.py  logging.py  metrics.py  setup.py  token_estimator.py
src/ploston_core/template/: __init__.py  context.py  engine.py  filters.py  parser.py  types.py
src/ploston_core/types/: __init__.py  config.py  enums.py  execution.py  internal.py  validation.py
src/ploston_core/utils/: docker.py
src/ploston_core/workflow/: __init__.py  authoring_metrics.py  parser.py  registry.py  schema_generator.py  tools.py  types.py  validator.py
tests/: conftest.py
tests/docs/: __init__.py  test_documentation.py
tests/fuzz/: __init__.py  test_fuzz_harnesses.py
tests/integration/: __init__.py  test_mcp_notifications.py  test_redis_config_store.py  test_tool_resolver.py  test_workflow_persistence.py  test_workflow_tool_schema.py
tests/mocks/: __init__.py  mock_runner.py
tests/property/: test_config_validation.py  test_mcp_protocol.py  test_sandbox_execution.py  test_template_engine.py  test_template_filters.py  test_workflow_schema.py  test_workflow_validation.py
tests/security/: test_sandbox_escapes.py  test_sandbox_extended.py  test_sandbox_property.py  test_sandbox_static.py
tests/snapshot/: __init__.py  test_workflow_outputs.py
tests/snapshot/__snapshots__/: test_workflow_outputs.ambr
tests/unit/: test_logger_source_field.py
tests/unit/api/: __init__.py  test_auth_hook.py  test_config.py  test_mcp_server_status.py  test_middleware.py  test_models.py  test_runner_models.py  test_runner_router.py  test_runner_static.py  test_store.py  test_tools_refresh.py  test_tools_suggested_schema.py
tests/unit/auth/: __init__.py  test_api_key.py  test_models.py  test_tool_filter.py
tests/unit/config/: test_config_importer.py  test_mode_manager.py  test_redis_scan_keys.py  test_secret_detector.py  test_staged_config.py
tests/unit/engine/: test_build_error_metadata.py  test_code_step_call_mcp.py  test_error_enrichment.py  test_execution_result_mcp_response.py  test_normalize.py  test_tool_step_normalization.py
tests/unit/invoker/: __init__.py  test_invoker_runner.py  test_invoker_schema_hook.py
tests/unit/mcp_frontend/: __init__.py  test_direct_tool_logs.py  test_http_transport.py  test_mode_aware.py
tests/unit/mocks/: test_mock_runner.py
tests/unit/native_tools/: __init__.py  test_health_manager.py
tests/unit/registry/: test_schema_injection.py
tests/unit/runner_management/: __init__.py  test_dispatcher.py  test_embedded_ca.py  test_persistent_registry.py  test_registry.py  test_router.py
tests/unit/sandbox/: test_call_mcp.py  test_call_mcp_observability.py  test_library_imports.py  test_runner_context.py  test_sandbox_return_rewrite.py  test_strptime.py
tests/unit/schema/: test_backends.py  test_extractor_sentinel.py  test_formatters.py  test_store.py  test_types.py
tests/unit/telemetry/: test_chain_detector.py  test_chain_signals.py  test_instrumentation.py  test_logging.py  test_metrics.py  test_otlp_exporters.py  test_store_collector.py  test_store_memory.py  test_store_redactor.py  test_store_retention.py  test_store_sqlite.py  test_store_types.py  test_token_estimator.py
tests/unit/workflow/: test_build_tool_preview.py  test_on_missing_tool.py  test_registry_persistence.py  test_resolve_tool_schema_output.py  test_schema_generator.py  test_schema_import_notes.py  test_tool_schema_response_hint.py  test_validate_await.py  test_workflow_patch.py  (+2 more)
(+64 files in other folders)
