[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "ploston-core"
version = "1.1.0"
description = "Core engine for Ploston - Deterministic Agent Execution Layer"
readme = "README.md"
license = "Apache-2.0"
requires-python = ">=3.12"
authors = [
    { name = "Ostan Labs", email = "hello@ostanlabs.com" }
]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: Apache Software License",
    "Programming Language :: Python :: 3.12",
    "Topic :: Software Development :: Libraries :: Application Frameworks",
]
dependencies = [
    "fastapi>=0.115.0",
    "starlette>=0.37.2",  # Required for httpx>=0.28.0 compatibility
    "uvicorn>=0.27.0",
    "pydantic>=2.5.0",
    "jinja2>=3.1.0",
    "pyyaml>=6.0",
    "httpx>=0.26.0",
    "sse-starlette>=1.8.0",
    "prometheus-client>=0.19.0",
    "structlog>=24.1.0",
    "mcp>=1.0.0",
    "opentelemetry-api>=1.20.0",
    "opentelemetry-sdk>=1.20.0",
    "opentelemetry-exporter-otlp>=1.20.0",
    "opentelemetry-exporter-prometheus>=0.45b0",
]

[project.optional-dependencies]
# Development dependencies
dev = [
    "pytest>=8.0.0",
    "pytest-asyncio>=0.23.0",
    "pytest-cov>=4.1.0",
    "ruff>=0.2.0",
    "mypy>=1.8.0",
]
# Kafka tools - for kafka_publish, kafka_consume, etc.
kafka = [
    "kafka-python>=2.0.0",
]
# All native tools dependencies (for Docker images)
tools = [
    "kafka-python>=2.0.0",
]

[project.urls]
Homepage = "https://github.com/ostanlabs/ploston-core"
Documentation = "https://ostanlabs.netlify.app"
Repository = "https://github.com/ostanlabs/ploston-core"

[tool.hatch.build.targets.wheel]
packages = ["src/ploston_core"]

[tool.hatch.build.targets.sdist]
include = [
    "/src",
    "/tests",
    "/README.md",
]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]

[tool.ruff]
line-length = 100
target-version = "py312"

[tool.ruff.lint]
select = ["E", "F", "I", "N", "W", "UP"]
ignore = ["E501"]

[tool.mypy]
python_version = "3.12"
strict = true
