[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "ploston-core"
version = "1.5.0"
description = "Core engine for Ploston - Deterministic Agent Execution Layer"
readme = "README.md"
license = "Apache-2.0"
requires-python = ">=3.12"
authors = [
    { name = "Ostan Labs", email = "hello@ostanlabs.com" }
]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: Apache Software License",
    "Programming Language :: Python :: 3.12",
    "Topic :: Software Development :: Libraries :: Application Frameworks",
]
dependencies = [
    "fastapi>=0.115.0",
    "starlette>=0.37.2", # Required for httpx>=0.28.0 compatibility
    "uvicorn>=0.27.0",
    "pydantic>=2.5.0",
    "jinja2>=3.1.0",
    "pyyaml>=6.0",
    "httpx>=0.26.0",
    "sse-starlette>=1.8.0",
    "prometheus-client>=0.19.0",
    "structlog>=24.1.0",
    "mcp>=1.0.0",
    "opentelemetry-api>=1.20.0",
    "opentelemetry-sdk>=1.20.0",
    "opentelemetry-exporter-otlp>=1.20.0",
    "opentelemetry-exporter-prometheus>=0.45b0",
    "opentelemetry-instrumentation-logging>=0.45b0",
    "redis>=5.0.0", # Redis config store
    "fastmcp>=2.14.4",
    "bcrypt>=5.0.0",
    "anthropic>=0.40.0",  # T-687: sandbox LLM synthesis support
    "pypdf>=4.0.0",  # T-686: sandbox PDF parsing support
    # S-263: explicit floors to pull patched transitive versions into the resolver
    "cryptography>=46.0.7",         # CVE-2026-39892 / CVE-2026-26007 / CVE-2026-34073
    "authlib>=1.6.9",               # CVE-2026-27962 / CVE-2026-28498 / CVE-2026-28490 / CVE-2026-28802
    "pyjwt>=2.12.0",                # CVE-2026-32597
    "protobuf>=6.33.5",             # CVE-2026-0994
    "python-multipart>=0.0.26",     # CVE-2026-40347 / CVE-2026-24486
    "pygments>=2.20.0",             # CVE-2026-4539
]

[project.optional-dependencies]
# Development dependencies
dev = [
    "pytest>=9.0.3",                # S-263: CVE-2025-71176 (insecure /tmp/pytest-of-{user})
    "pytest-asyncio>=0.23.0",
    "pytest-cov>=4.1.0",
    "pytest-xdist>=3.0.0",
    "pytest-timeout>=2.0.0",
    "ruff>=0.2.0",
    "mypy>=1.8.0",
]
# Property-based and fuzz testing
test = [
    "hypothesis>=6.100.0",
    "schemathesis>=3.25.0",
    "requests>=2.33.0",             # S-263: CVE-2026-25645 (insecure tmp file reuse)
    "httpx>=0.27.0",
    "werkzeug>=3.1.6",              # S-263: CVE-2026-27199 (safe_join Windows device names); transitive via schemathesis
]
# Security testing
security-test = [
    "hypothesis>=6.100.0",
    "bandit>=1.7.0",
]
# Kafka tools - for kafka_publish, kafka_consume, etc.
kafka = [
    "kafka-python>=2.0.0",
]
# All native tools dependencies (for Docker images)
tools = [
    "kafka-python>=2.0.0",
]

[project.urls]
Homepage = "https://github.com/ostanlabs/ploston-core"
Documentation = "https://ostanlabs.netlify.app"
Repository = "https://github.com/ostanlabs/ploston-core"

[tool.hatch.build.targets.wheel]
packages = ["src/ploston_core"]

[tool.hatch.build.targets.sdist]
include = [
    "/src",
    "/tests",
    "/README.md",
]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]

[tool.ruff]
line-length = 100
target-version = "py312"

[tool.ruff.lint]
select = ["E", "F", "I", "N", "W", "UP"]
ignore = ["E501"]

[tool.mypy]
python_version = "3.12"
strict = true

[dependency-groups]
dev = [
    "ruff>=0.14.14",
    "syrupy>=5.1.0",
]
